# sp500_leverage_vs_non_leverage

./: CLAUDE.md  Dockerfile  README.md  api.json  dashboard.py  fly.toml  ingestion.py  launch.plist  launch.sh  live_trading.py  main.py  pyproject.toml  read.py  run_sync.err  run_sync.out  sb.py  t212.py  test.py  tgbot.py  utils.py
.github/workflows/: main.yaml
src/sp500_bot/: __init__.py  dashboard.py  ingestion.py  live_trading.py  main.py  models.py  read.py  sb.py  t212.py  test.py  tgbot.py  utils.py
