[project]
name = "sp500-leverage-vs-non-leverage"
version = "0.1.0"
description = "S&P 500 leverage vs non-leverage trading bot"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator>=0.35.0",
    "more-itertools>=10.0.0",
    "plotly>=6.3.1",
    "pyright>=1.1.407",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "streamlit>=1.50.0",
    "supabase>=2.22.2",
]

[project.scripts]
sp500-bot = "sp500_bot.live_trading:main"
sp500-ingest = "sp500_bot.ingestion:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sp500_bot"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
